<resources>
    <string name="app_name">Diary</string>
    <string name="username">Enter username</string>
    <string name="password">Enter password</string>
    <string name="log_in">Log In</string>
    <string name="new_user">New User</string>
    <string name="remove_user">Remove User</string>
    <string name="add_note">Add Note</string>
    <string name="log_out">Log Out</string>
    <string name="title_hint">Title...</string>
    <string name="note_hint">Your Note...</string>
    <string name="back_button">Back</string>
    <string name="remove_note">Remove Note</string>
    <string name="account">Account</string>
    <string name="account_management">Account Management</string>
    <string name="change_password">Change Password</string>
    <string name="retype_password">New Password</string>
    <string name="change_username">Change Username</string>
</resources>
