<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.steveq.diary.controller.NoteCreatorActivity">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"/>

    <TextView
        android:id="@+id/curTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_hint"
        android:gravity="start"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/add_new_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_note"/>

</LinearLayout>
